<resources>
    <string name="app_name">Geo Trouvetou</string>

    <!-- Connexion -->
    <string name="connexion_titre">Connexion</string>
    <string name="hint_email">Email</string>
    <string name="hint_mot_de_passe">Mot de passe</string>
    <string name="btn_connexion">Se connecter</string>
    <string name="btn_aller_inscription">Pas encore de compte ? S\'inscrire</string>

    <!-- Inscription -->
    <string name="inscription_titre">Créer un compte</string>
    <string name="hint_confirmer_mot_de_passe">Confirmer le mot de passe</string>
    <string name="btn_inscription">S\'inscrire</string>
    <string name="btn_retour_connexion">Déjà un compte ? Se connecter</string>

    <!-- Profil -->
    <string name="btn_profil">Mon Profil</string>
    <string name="btn_deconnexion">Se déconnecter</string>
    <string name="btn_supprimer_compte">Supprimer le compte</string>


    <!-- Réseau / Localisation -->
    <string name="toast_connexion_perdue_titre">Connexion perdue</string>
    <string name="toast_connexion_perdue_desc">Vérifiez votre connexion internet</string>
    <string name="toast_connexion_retablie_titre">Connexion rétablie</string>
    <string name="toast_connexion_retablie_desc">Vous êtes de nouveau en ligne</string>
    <string name="toast_localisation_perdue_titre">Localisation désactivée</string>
    <string name="toast_localisation_perdue_desc">Activez la localisation pour profiter de la carte</string>
    <string name="toast_localisation_retablie_titre">Localisation activée</string>
    <string name="toast_localisation_retablie_desc">Votre position est de nouveau disponible</string>

    <!-- Erreurs -->
    <string name="erreur_email_requis">L\'email est requis</string>
    <string name="erreur_email_format">Adresse email invalide (ex: nom@exemple.com)</string>
    <string name="erreur_mot_de_passe_requis">Le mot de passe est requis</string>
    <string name="erreur_mot_de_passe_trop_court">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="erreur_mots_de_passe_differents">Les mots de passe ne correspondent pas</string>
    <string name="erreur_connexion">Connexion échouée. Vérifiez vos identifiants.</string>
    <string name="erreur_inscription">Inscription échouée. Réessayez.</string>
</resources>
